Add overall improvements

--- a/index.html
+++ b/index.html
@@ -20,28 +20,92 @@
 
   <div class="test-block"></div>
 
-  <section id="tribute-info">
-    <h3>Here is a summary of Daft Punk's discography:</h3>
-    <ul>
+  <section class="disco-section">
+    <h3 class="disco-header">Here is a summary of Daft Punk's discography:</h3>
+    <ul class="disco-ulist">
       <li><strong>1997</strong> - Homework</li>
-      <p class="album-review">If there is a valley, or caricature album in Daft’s catalog, it’s Human, the group’s most melodically 
+      <p class="album-review">
+        Over time, this list’s Record Of Honor has become lauded moreso for its legacy — as pop’s first password 
+        to the French-house hard drive — than for the sum of its hypnotic parts. And maybe that’s for the best; 
+        Homework isn’t exactly cohesive, nor was it truly meant to be. The group’s initial plan was to rollout a 
+        handful of free-standing singles, but soon there were too many quality tracks not to make an album.
+      </p>
+      <p class="album-review">
+        To its credit, Homework remains an alluring hodgepodge, and our first taste of Daft’s eclecticism: the 
+        disco-tech bassline and burrowing hook of “Around the World”; the West Coast hip-hop whirring of “Da Funk” 
+        (Dr. Dre even gets a shoutout in the later track “Teachers”); the spacey swagger of Parliament-Funkadelic 
+        and Chic threaded throughout. Homework can feel overtly simple, even amateurish when compared to its 
+        successors, but we still have great respect for the project that morphed Daft from loud lords of a cultish 
+        underground scene to bonafide tastemakers.
+      </p>
+      <li><strong>2001</strong> - Discovery</li>
+      <p class="album-review">
+        There is no better entry point into the Daft Punk cosmos than through Discovery, an album that bursts with 
+        glorious, fine-sugar hooks and childlike rapture. Daft’s exploration beyond Euro house jams welcomed more 
+        pointed homages to the disco and synth-pop of its youth, and birthed a joyful, engaging record — and perhaps 
+        the most bulletproof upper-third of any album in the discography: see the fuzzy Van Halen guitar wails of 
+        “Aerodynamic,” or the pleasant, blinking pop of “Digital Love,” which likely could have highlighted a 
+        Mario Kart soundtrack. That playful quality cascades down to the cryptic “Veridis Quo” and its fairytale 
+        melody, and for those who still desired the more trance-like tactics, the record finishes with the 10 
+        minutes of electro-R&B hypnosis on “Too Long.”
+      </p>
+      <p class="album-review">
+        The LP’s moniker is apt on so many levels; for many of us, the harbinger of auto-tune “One More Time” was 
+        our first detection of the band, and for Daft themselves, the success of the song (No. 61 on the Hot 100) 
+        and regular radio play unveiled just how vast their audience could (and would) become. Daft’s music is 
+        designed for the good times, and if Bangalter and de Homem-Christo were to blast off today and escape to 
+        Planet Robot — where better parties and sweeter headgear await — Discovery would stand as the group’s true, 
+        zenith party project.
+      </p>
+      <li><strong>2005</strong> - Human After All</li>
+      <p class="album-review">
+        If there is a valley, or caricature album in Daft’s catalog, it’s Human, the group’s most melodically 
         austere and numbing record. While themes of dark, tech-fearing paranoia were fresh to the group — and 
         employed purposefully, to contrast the buoyancy of Discovery — Human’s themes largely feel recycled; 
         the tech-jargon labyrinth “Technologic,” piggybacks off the more memorable precursor “Harder Better 
         Faster Stronger,” and while plenty catchy in its thick guitar leads, the lead single “Robot Rock” is too 
-        on-the-nose for a band famous for its mechanized appearance.</p>
-        <p>Typically, Daft is a masterful employer of repetition, but the echoing hooks to “Steam Machine” and 
+        on-the-nose for a band famous for its mechanized appearance.
+      </p>
+        <p class="album-review">
+          Typically, Daft is a masterful employer of repetition, but the echoing hooks to “Steam Machine” and 
           “Television” border on monotony, and there just isn’t enough innovation to counteract the dullness. 
           Human is the lone Daft Punk album to feel reactionary to the band’s own success, and even if it did 
-          produce a successful inverse to Discovery, it was as impersonal as the group has ever been.</p>
-      <li><strong>2001</strong> - Discovery</li>
-      <li><strong>2005</strong> - Human After All</li>
+          produce a successful inverse to Discovery, it was as impersonal as the group has ever been.
+        </p>
       <li><strong>2013</strong> - Random Access Memories</li>
+      <p class="album-review">
+        Don’t call it a comeback. Eight years removed from the icy minimalism (and overall reception) of Human 
+        After All, Daft strove for balance, to marry live instrumentation and electronic prowess in ways unlike 
+        anything the group had previously attempted. The meticulous output was Random Access Memories, a wonderfully 
+        warm, sprawling LP that stands not only as one of the duo’s strongest albums, but as one of the most 
+        spectacular records of the 2010s. Though Memories likely pays closest tribute to the disco and funk eras 
+        that have fascinated the group all along — almost inevitably, Chic’s Nile Rodgers plays on three songs — 
+        so much of this project was fresh to their sound, from the understated use of drum machines and vocoder, 
+        to their willingness to collaborate and cross new borders.
+      </p>
+      <p class="album-review">
+        Everyone knows Pharrell Williams’ appearance on the commercial colossus “Get Lucky” and “Lose Yourself To 
+        Dance,” but don’t you dare overlook the delicate piano from Canadian pianist Chilly Gonzales on “Within,” 
+        The Strokes singer Julian Casablancas’ traipsing vocal on “Instant Crush,” or the revered folk songwriter 
+        Paul Williams commanding the science-fiction opus “Touch.” And if there’s any proof in trophies, consider 
+        that Album of the Year Grammy win R.A.M. scored in 2014.
+      </p>
     </ul>
-  
-    <h3 id="outro">
-      If you read until this point, I appreciate the time you spent here. If you wish, you can read more about those incredible albums and <strong>a lot more</strong> on their <a id="tribute-link" href="https://en.wikipedia.org/wiki/Daft_Punk_discography" target="_blank">Wikipedia entry</a>. Hope you enjoyed your stay here!
+
+    <section class="source">
+      <p>Source: <a href="https://www.billboard.com/music/music-news/daft-punk-albums-ranked-best-worst-list-2017-7676249/" target="_blank">Billboard</a></p>
+    </section>
+
+    <img class ="outro-pic" src="https://i.pinimg.com/originals/9e/45/8d/9e458d61b0f85878cf8425411b2d5ca1.gif" alt="thomas-helmet">
+
+    <h3 class="outro-header">
+      If you read until this point, I appreciate the time you spent here. If you wish, you can read more about those incredible albums and <strong>a lot more</strong> on their <a id="tribute-link" href="https://en.wikipedia.org/wiki/Daft_Punk_discography" target="_blank">Wikipedia entry</a>.
     </h3>
+
+    <p class="outro-text">
+      Hope you enjoyed your stay here!
+    </p>
+
   </section>
 </main>
 
